--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.0",
+    "framer-motion": "^11.3.6",
     "lucide-react": "^0.408.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.4.0",
